// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ai2svelte generated output (visual-test) > preview-dev matches last-approved snapshot 1`] = `
"
<!-- Generated by ai2svelte v1.0.8 - <timestamp> -->
<!-- ai file: preview-dev.ai -->
<style lang="scss">
#g-preview-dev-box {
	container-type: inline-size;
	container-name: g-preview-dev-box;
}
#g-preview-dev-box,
#g-preview-dev-box .g-artboard {
	margin: 0 auto;
}
#g-preview-dev-box p {
	margin: 0;
}
#g-preview-dev-box .g-aiAbs {
	position: absolute;
}
#g-preview-dev-box .g-aiImg {
	position: absolute;
	top: 0;
	display: block;
	width: 100% !important;
	height: 100%;
	background-size: contain;
	background-repeat: no-repeat;
}
#g-preview-dev-box .g-aiSymbol {
	position: absolute;
	box-sizing: border-box;
}
#g-preview-dev-box .g-aiPointText p {
	white-space: nowrap;
}
#g-preview-dev-box.g-aiPointText p { white-space: nowrap; }
#g-preview-dev-box{
width: 100%;
container-type: inline-size;
@container (min-width:0px) and (max-width: 509px) {
#g-preview-dev-xs {
display: block !important;

#g-png24-layer-image {

background-image: var(--g-png24-layer-image-xs);

}

#g-preview-dev-xs-img {

background-image: var(--g-preview-dev-xs-img);

}

}
}
@container (min-width:510px) and (max-width: 659px) {
#g-preview-dev-sm {
display: block !important;

#g-png24-layer-image {

background-image: var(--g-png24-layer-image-sm);

}

#g-preview-dev-sm-img {

background-image: var(--g-preview-dev-sm-img);

}

}
}
@container (min-width:660px) and (max-width: 929px) {
#g-preview-dev-md {
display: block !important;

#g-png24-layer-image {

background-image: var(--g-png24-layer-image-md);

}

#g-preview-dev-md-img {

background-image: var(--g-preview-dev-md-img);

}

}
}
@container (min-width:930px) and (max-width: 1199px) {
#g-preview-dev-lg {
display: block !important;

#g-png24-layer-image {

background-image: var(--g-png24-layer-image-lg);

}

#g-preview-dev-lg-img {

background-image: var(--g-preview-dev-lg-img);

}

}
}
@container (min-width:1200px) {
#g-preview-dev-xl {
display: block !important;

#g-png24-layer-image {

background-image: var(--g-png24-layer-image-xl);

}

#g-preview-dev-xl-img {

background-image: var(--g-preview-dev-xl-img);

}

}
}
}
#g-preview-dev-xs {
	position: relative;
	overflow: hidden;
	display: none;
}
#g-preview-dev-xs p {
	font-weight: regular;
	line-height: 72px;
	opacity: 1;
	letter-spacing: 0em;
	font-size: 60px;
	text-align: left;
	color: rgb(0,0,0);
	text-transform: none;
	padding-bottom: 0;
	padding-top: 0;
	mix-blend-mode: normal;
	font-style: normal;
	height: auto;
	position: static;
}
#g-preview-dev-xs .g-pstyle0 {
	font-weight: 500;
	text-align: center;
}
#g-preview-dev-sm {
	position: relative;
	overflow: hidden;
	display: none;
}
#g-preview-dev-sm p {
	font-weight: regular;
	line-height: 13px;
	opacity: 1;
	letter-spacing: 0.2em;
	font-size: 11px;
	text-align: left;
	color: rgb(0,0,0);
	text-transform: none;
	padding-bottom: 0;
	padding-top: 0;
	mix-blend-mode: normal;
	font-style: normal;
	height: auto;
	position: static;
}
#g-preview-dev-sm .g-pstyle0 {
	font-weight: 500;
	line-height: 72px;
	letter-spacing: 0em;
	font-size: 60px;
	text-align: center;
}
#g-preview-dev-sm .g-pstyle1 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
	text-align: center;
}
#g-preview-dev-sm .g-pstyle2 {
	font-weight: 300;
	text-align: center;
}
#g-preview-dev-sm .g-pstyle3 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
}
#g-preview-dev-md {
	position: relative;
	overflow: hidden;
	display: none;
}
#g-preview-dev-md p {
	font-weight: regular;
	line-height: 17px;
	opacity: 1;
	letter-spacing: 0.2em;
	font-size: 14px;
	text-align: left;
	color: rgb(0,0,0);
	text-transform: none;
	padding-bottom: 0;
	padding-top: 0;
	mix-blend-mode: normal;
	font-style: normal;
	height: auto;
	position: static;
}
#g-preview-dev-md .g-pstyle0 {
	font-weight: 500;
	line-height: 72px;
	letter-spacing: 0em;
	font-size: 60px;
	text-align: center;
}
#g-preview-dev-md .g-pstyle1 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
	text-align: center;
}
#g-preview-dev-md .g-pstyle2 {
	font-weight: 300;
	text-align: center;
}
#g-preview-dev-md .g-pstyle3 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
}
#g-preview-dev-lg {
	position: relative;
	overflow: hidden;
	display: none;
}
#g-preview-dev-lg p {
	font-weight: regular;
	line-height: 17px;
	opacity: 1;
	letter-spacing: 0.2em;
	font-size: 14px;
	text-align: left;
	color: rgb(0,0,0);
	text-transform: none;
	padding-bottom: 0;
	padding-top: 0;
	mix-blend-mode: normal;
	font-style: normal;
	height: auto;
	position: static;
}
#g-preview-dev-lg .g-pstyle0 {
	font-weight: 500;
	line-height: 72px;
	letter-spacing: 0em;
	font-size: 60px;
	text-align: center;
}
#g-preview-dev-lg .g-pstyle1 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
	text-align: center;
}
#g-preview-dev-lg .g-pstyle2 {
	font-weight: 300;
	text-align: center;
}
#g-preview-dev-lg .g-pstyle3 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
}
#g-preview-dev-xl {
	position: relative;
	overflow: hidden;
	display: none;
}
#g-preview-dev-xl p {
	font-weight: regular;
	line-height: 17px;
	opacity: 1;
	letter-spacing: 0.2em;
	font-size: 14px;
	text-align: left;
	color: rgb(0,0,0);
	text-transform: none;
	padding-bottom: 0;
	padding-top: 0;
	mix-blend-mode: normal;
	font-style: normal;
	height: auto;
	position: static;
}
#g-preview-dev-xl .g-pstyle0 {
	font-weight: 500;
	line-height: 72px;
	letter-spacing: 0em;
	font-size: 60px;
	text-align: center;
}
#g-preview-dev-xl .g-pstyle1 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
	text-align: center;
}
#g-preview-dev-xl .g-pstyle2 {
	font-weight: 300;
	text-align: center;
}
#g-preview-dev-xl .g-pstyle3 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
}
.g-taggedText:empty::before {
content: attr(data-tagged-type);
padding: 0px 4px;
font-size: 0.6rem;
font-style: normal;
color: #fff;
background-color: #ee0000;
display: block;
font-weight: 800;
visibility: var(--debug-tagged-text, hidden);
}

.g-taggedText:empty::after {
content: attr(data-tagged-prop);
padding: 0px 4px;
font-size: 0.8rem;
font-style: normal;
color: #fff;
font-weight: 500;
visibility: var(--debug-tagged-text, hidden);
}

.g-taggedText:empty {
background-color: #440000;
outline: 2px solid #ee0000;
visibility: var(--debug-tagged-text, hidden);
}

.g-taggedText:not(:empty)::before {
content: attr(data-tagged-type);
position: absolute;
width: calc(100% + 4px);
transform: translateY(-100%) translateX(-2px);
padding: 0px 4px;
font-size: 0.6rem;
font-style: normal;
color: #fff;
background-color: black;
display: block;
font-weight: 800;
visibility: var(--debug-tagged-text, hidden);
box-sizing: border-box;
}

.g-taggedText {
outline: var(--debug-stroke, 0px) solid black;
}

</style>

<script>
	let { assetsPath = '/', onAiMounted = null, onArtboardChange = null, chart, taggedText = {text: {}, htext: {}}, debugTaggedText = false } = $props();
import { onMount, untrack } from 'svelte';

let processedPath = $derived(

assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/'

);

let aiBox;
let aiBoxWidth = $state(undefined);
let allArtboards = $state([]);
let activeArtboard = $state(undefined);
onMount(() => {
allArtboards = Array.from(aiBox.querySelectorAll('.g-artboard'));
onAiMounted?.();
});
$effect(() => {
if (aiBoxWidth && onArtboardChange) {
const currentArtboard = allArtboards.filter((artboard) => {
const minWidth = parseFloat(artboard.dataset.minWidth);
const maxWidth = parseFloat(artboard.dataset.maxWidth) || Infinity;
return minWidth <= aiBoxWidth && maxWidth >= aiBoxWidth;
})[0];
if (currentArtboard?.id !== activeArtboard?.id) {
activeArtboard = untrack(() => currentArtboard);
onArtboardChange(activeArtboard);
}
}
});

</script>
<div id="g-preview-dev-box" class="ai2svelte" bind:this={aiBox} bind:clientWidth={aiBoxWidth} style:--debug-tagged-text={debugTaggedText ? 'visible' : 'hidden'}
style:--debug-stroke={debugTaggedText ? '2px' : '0px'} style:--g-png24-layer-image-xs={\`url("\${processedPath}/tagged/preview-dev/layer-image-xs.png")\`};
style:--g-preview-dev-xs-img={\`url("\${processedPath}/preview-dev-xs.jpg")\`};
style:--g-png24-layer-image-sm={\`url("\${processedPath}/tagged/preview-dev/layer-image-sm.png")\`};
style:--g-preview-dev-sm-img={\`url("\${processedPath}/preview-dev-sm.jpg")\`};
style:--g-png24-layer-image-md={\`url("\${processedPath}/tagged/preview-dev/layer-image-md.png")\`};
style:--g-preview-dev-md-img={\`url("\${processedPath}/preview-dev-md.jpg")\`};
style:--g-png24-layer-image-lg={\`url("\${processedPath}/tagged/preview-dev/layer-image-lg.png")\`};
style:--g-preview-dev-lg-img={\`url("\${processedPath}/preview-dev-lg.jpg")\`};
style:--g-png24-layer-image-xl={\`url("\${processedPath}/tagged/preview-dev/layer-image-xl.png")\`};
style:--g-preview-dev-xl-img={\`url("\${processedPath}/preview-dev-xl.jpg")\`};>
	<!-- Artboard: xs -->
	<div id="g-preview-dev-xs" class="g-artboard" style="max-width: 509px;aspect-ratio: 0.53225806451613;" data-aspect-ratio="0.532" data-min-width="0" data-max-width="509">
		<div id="g-preview-dev-xs-img" class="g-preview-dev-xs-img g-aiImg" alt="" style=""></div>		<div id="g-ai0-1" class="g-artwork g-aiAbs" style="top:43.871%;left:50.2595%;margin-left:-10.6061%;width:21.2121%;">
			<p class="g-pstyle0">XS</p>
		</div>
		<div id="g-png24-layer-image" class="g-png24 g-aiImg" alt="" style="position:absolute;left:29.0909%;top:54.8387%;width:41.8182% !important;height:22.2581%;opacity:1;mix-blend-mode: exclusion;;"></div>
<svg class="g-preview-dev-xs-vector-img g-svg" style="width: 39.697%;height: 13.9785%;top: 27.1237%;left: 30.303%;position: absolute;" id="g-svg-vector" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 131 86.667">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <rect style="mix-blend-mode:screen;" width="86.667" height="86.667" fill="#fbd200"/>
  <rect style="mix-blend-mode:difference;" x="44.333" width="86.667" height="86.667" fill="#ef0000"/>
<style>
#g-svg-vector rect, #g-svg-vector circle, #g-svg-vector path, #g-svg-vector line, #g-svg-vector polyline, #g-svg-vector polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>

		<div class="g-snippet-layer g-chart">
			<div class="g-aiSymbol g-aiSnippet" id="g-snippet-chart" data-name="chart" style="width: 32.7273%; height: 17.4194%; margin-left: -16.3636%; margin-top: -16.3636%; background-color: rgb(0,0,0); left: 80%; top: 50%;">
{@render chart?.()}
</div>
		</div>

	</div>
	<!-- Artboard: sm -->
	<div id="g-preview-dev-sm" class="g-artboard" style="min-width: 510px;max-width: 659px;aspect-ratio: 0.82258064516129;" data-aspect-ratio="0.823" data-min-width="510" data-max-width="659">
		<div id="g-preview-dev-sm-img" class="g-preview-dev-sm-img g-aiImg" alt="" style=""></div>		<div id="g-ai1-1" class="g-artwork g-aiAbs" style="top:43.871%;left:50.0894%;margin-left:-8.1373%;width:16.2745%;">
			<p class="g-pstyle0">SM</p>
		</div>
		<div id="g-png24-layer-image" class="g-png24 g-aiImg" alt="" style="position:absolute;left:60.3922%;top:35.6452%;width:33.7255% !important;height:27.7419%;opacity:1;mix-blend-mode: exclusion;;"></div>
		<div id="g-text1" class="g-plain g-aiAbs" style="top:63.2258%;left:34.6994%;width:28.8235%;">
			
<p class="g-pstyle3 g-taggedText g-text"data-tagged-type="TEXT" data-tagged-prop="plain.text1">{taggedText?.text?.plain?.text1 || ''}</p>

		</div>
		<div id="g-text1" class="g-html g-aiAbs" style="top:46.2903%;left:77.2423%;margin-left:-15.6863%;width:31.3725%;">
			
<p class="g-pstyle1 g-taggedText g-htext"data-tagged-type="HTEXT" data-tagged-prop="html.text1">{@html taggedText?.htext?.html?.text1 || ''}</p>

		</div>
<svg class="g-preview-dev-sm-vector-img g-svg" style="width: 34.902%;height: 28.7097%;top: 41.129%;left: 11.3725%;position: absolute;" id="g-svg-vector" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 178 178">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <rect style="mix-blend-mode:screen;" width="118.667" height="118.667" fill="#fbd200"/>
  <rect style="mix-blend-mode:difference;" x="59.333" y="59.333" width="118.667" height="118.667" fill="#ef0000"/>
<style>
#g-svg-vector rect, #g-svg-vector circle, #g-svg-vector path, #g-svg-vector line, #g-svg-vector polyline, #g-svg-vector polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>

		<div id="g-ai1-4" class="g-text g-aiAbs" style="top:59.3548%;left:34.689%;margin-left:-8.0392%;width:16.0784%;">
			<p class="g-pstyle2">DIFFERENCE</p>
		</div>
		<div id="g-ai1-3" class="g-text g-aiAbs" style="top:49.0323%;left:23.0434%;margin-left:-5%;width:10%;">
			<p class="g-pstyle2">SCREEN</p>
		</div>
		<div class="g-snippet-layer g-chart">
			<div class="g-aiSymbol g-aiSnippet" id="g-snippet-chart" data-name="chart" style="width: 21.1765%; height: 17.4194%; margin-left: -10.5882%; margin-top: -10.5882%; background-color: rgb(0,0,0); left: 68.6274%; top: 32.7419%;">
{@render chart?.()}
</div>
		</div>

	</div>
	<!-- Artboard: md -->
	<div id="g-preview-dev-md" class="g-artboard" style="min-width: 660px;max-width: 929px;aspect-ratio: 1.06451612903226;" data-aspect-ratio="1.065" data-min-width="660" data-max-width="929">
		<div id="g-preview-dev-md-img" class="g-preview-dev-md-img g-aiImg" alt="" style=""></div>		<div id="g-ai2-1" class="g-artwork g-aiAbs" style="top:43.871%;left:50.0766%;margin-left:-6.8182%;width:13.6364%;">
			<p class="g-pstyle0">MD</p>
		</div>
		<div id="g-png24-layer-image" class="g-png24 g-aiImg" alt="" style="position:absolute;left:58.7879%;top:30.9677%;width:34.8485% !important;height:37.0968%;opacity:1;mix-blend-mode: exclusion;;"></div>
		<div id="g-text1" class="g-plain g-aiAbs" style="top:64.6774%;left:37.1162%;width:22.2727%;">
			
<p class="g-pstyle3 g-taggedText g-text"data-tagged-type="TEXT" data-tagged-prop="plain.text1">{taggedText?.text?.plain?.text1 || ''}</p>

		</div>
		<div id="g-text1" class="g-html g-aiAbs" style="top:46.2903%;left:76.2024%;margin-left:-12.1212%;width:24.2424%;">
			
<p class="g-pstyle1 g-taggedText g-htext"data-tagged-type="HTEXT" data-tagged-prop="html.text1">{@html taggedText?.htext?.html?.text1 || ''}</p>

		</div>
<svg class="g-preview-dev-md-vector-img g-svg" style="width: 33.6364%;height: 35.8065%;top: 37.5806%;left: 12.5758%;position: absolute;" id="g-svg-vector" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 222 222">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <rect style="mix-blend-mode:screen;" width="148" height="148" fill="#fbd200"/>
  <rect style="mix-blend-mode:difference;" x="74" y="74" width="148" height="148" fill="#ef0000"/>
<style>
#g-svg-vector rect, #g-svg-vector circle, #g-svg-vector path, #g-svg-vector line, #g-svg-vector polyline, #g-svg-vector polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>

		<div id="g-ai2-4" class="g-text g-aiAbs" style="top:60.1613%;left:35.0265%;margin-left:-7.7273%;width:15.4545%;">
			<p class="g-pstyle2">DIFFERENCE</p>
		</div>
		<div id="g-ai2-3" class="g-text g-aiAbs" style="top:47.4194%;left:23.8533%;margin-left:-4.8485%;width:9.697%;">
			<p class="g-pstyle2">SCREEN</p>
		</div>
		<div class="g-snippet-layer g-chart">
			<div class="g-aiSymbol g-aiSnippet" id="g-snippet-chart" data-name="chart" style="width: 24.2424%; height: 25.8065%; margin-left: -12.1212%; margin-top: -12.1212%; background-color: rgb(0,0,0); left: 68.1818%; top: 22.0968%;">
{@render chart?.()}
</div>
		</div>

	</div>
	<!-- Artboard: lg -->
	<div id="g-preview-dev-lg" class="g-artboard" style="min-width: 930px;max-width: 1199px;aspect-ratio: 1.5;" data-aspect-ratio="1.5" data-min-width="930" data-max-width="1199">
		<div id="g-preview-dev-lg-img" class="g-preview-dev-lg-img g-aiImg" alt="" style=""></div>		<div id="g-ai3-1" class="g-artwork g-aiAbs" style="top:43.871%;left:50.0663%;margin-left:-3.7634%;width:7.5269%;">
			<p class="g-pstyle0">LG</p>
		</div>
		<div id="g-png24-layer-image" class="g-png24 g-aiImg" alt="" style="position:absolute;left:59.1398%;top:27.7419%;width:29.0323% !important;height:43.5484%;opacity:1;mix-blend-mode: exclusion;;"></div>
		<div id="g-text1" class="g-plain g-aiAbs" style="top:64.6774%;left:35.8029%;width:15.8065%;">
			
<p class="g-pstyle3 g-taggedText g-text"data-tagged-type="TEXT" data-tagged-prop="plain.text1">{taggedText?.text?.plain?.text1 || ''}</p>

		</div>
		<div id="g-text1" class="g-html g-aiAbs" style="top:46.2903%;left:73.649%;margin-left:-8.6022%;width:17.2043%;">
			
<p class="g-pstyle1 g-taggedText g-htext"data-tagged-type="HTEXT" data-tagged-prop="html.text1">{@html taggedText?.htext?.html?.text1 || ''}</p>

		</div>
<svg class="g-preview-dev-lg-vector-img g-svg" style="width: 23.871%;height: 35.8065%;top: 37.5806%;left: 18.2796%;position: absolute;" id="g-svg-vector" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 222 222">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <rect style="mix-blend-mode:screen;" width="148" height="148" fill="#fbd200"/>
  <rect style="mix-blend-mode:difference;" x="74" y="74" width="148" height="148" fill="#ef0000"/>
<style>
#g-svg-vector rect, #g-svg-vector circle, #g-svg-vector path, #g-svg-vector line, #g-svg-vector polyline, #g-svg-vector polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>

		<div id="g-ai3-4" class="g-text g-aiAbs" style="top:60.1613%;left:34.2123%;margin-left:-5.4839%;width:10.9677%;">
			<p class="g-pstyle2">DIFFERENCE</p>
		</div>
		<div id="g-ai3-3" class="g-text g-aiAbs" style="top:47.4194%;left:26.283%;margin-left:-3.4409%;width:6.8817%;">
			<p class="g-pstyle2">SCREEN</p>
		</div>
		<div class="g-snippet-layer g-chart">
			<div class="g-aiSymbol g-aiSnippet" id="g-snippet-chart" data-name="chart" style="width: 17.2043%; height: 25.8065%; margin-left: -8.6022%; margin-top: -8.6022%; background-color: rgb(0,0,0); left: 61.7204%; top: 22.0968%;">
{@render chart?.()}
</div>
		</div>

	</div>
	<!-- Artboard: xl -->
	<div id="g-preview-dev-xl" class="g-artboard" style="min-width: 1200px;aspect-ratio: 1.93548387096774;" data-aspect-ratio="1.935" data-min-width="1200">
		<div id="g-preview-dev-xl-img" class="g-preview-dev-xl-img g-aiImg" alt="" style=""></div>		<div id="g-ai4-1" class="g-artwork g-aiAbs" style="top:43.871%;left:50.0042%;margin-left:-2.7917%;width:5.5833%;">
			<p class="g-pstyle0">XL</p>
		</div>
		<div id="g-png24-layer-image" class="g-png24 g-aiImg" alt="" style="position:absolute;left:60.75%;top:27.7419%;width:22.5% !important;height:43.5484%;opacity:1;mix-blend-mode: exclusion;;"></div>
		<div id="g-text1" class="g-plain g-aiAbs" style="top:64.6774%;left:34.5806%;width:12.25%;">
			
<p class="g-pstyle3 g-taggedText g-text"data-tagged-type="TEXT" data-tagged-prop="plain.text1">{taggedText?.text?.plain?.text1 || ''}</p>

		</div>
		<div id="g-text1" class="g-html g-aiAbs" style="top:46.2903%;left:71.9946%;margin-left:-6.6667%;width:13.3333%;">
			
<p class="g-pstyle1 g-taggedText g-htext"data-tagged-type="HTEXT" data-tagged-prop="html.text1">{@html taggedText?.htext?.html?.text1 || ''}</p>

		</div>
<svg class="g-preview-dev-xl-vector-img g-svg" style="width: 18.5%;height: 35.8065%;top: 37.5806%;left: 21.25%;position: absolute;" id="g-svg-vector" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 222 222">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <rect style="mix-blend-mode:screen;" width="148" height="148" fill="#fbd200"/>
  <rect style="mix-blend-mode:difference;" x="74" y="74" width="148" height="148" fill="#ef0000"/>
<style>
#g-svg-vector rect, #g-svg-vector circle, #g-svg-vector path, #g-svg-vector line, #g-svg-vector polyline, #g-svg-vector polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>

		<div id="g-ai4-4" class="g-text g-aiAbs" style="top:60.1613%;left:33.5979%;margin-left:-4.25%;width:8.5%;">
			<p class="g-pstyle2">DIFFERENCE</p>
		</div>
		<div id="g-ai4-3" class="g-text g-aiAbs" style="top:47.4194%;left:27.4526%;margin-left:-2.6667%;width:5.3333%;">
			<p class="g-pstyle2">SCREEN</p>
		</div>
		<div class="g-snippet-layer g-chart">
			<div class="g-aiSymbol g-aiSnippet" id="g-snippet-chart" data-name="chart" style="width: 13.3333%; height: 25.8065%; margin-left: -6.6667%; margin-top: -6.6667%; background-color: rgb(0,0,0); left: 66.1667%; top: 22.0968%;">
{@render chart?.()}
</div>
		</div>

	</div>
</div>



<!--

TAGGED TEXT PROPS

taggedText={
{
  "text": {
    "plain": {
      "text1": ""
    }
  },
  "htext": {
    "html": {
      "text1": ""
    }
  }
}
}

-->
<!-- End ai2svelte - <timestamp> -->
"
`;

exports[`ai2svelte generated output (visual-test) > preview-dev-svg matches last-approved snapshot 1`] = `
"
<!-- Generated by ai2svelte v1.0.8 - <timestamp> -->
<!-- ai file: preview-dev.ai -->
<style lang="scss">
#g-preview-dev-box {
	container-type: inline-size;
	container-name: g-preview-dev-box;
}
#g-preview-dev-box,
#g-preview-dev-box .g-artboard {
	margin: 0 auto;
}
#g-preview-dev-box p {
	margin: 0;
}
#g-preview-dev-box .g-aiAbs {
	position: absolute;
}
#g-preview-dev-box .g-aiImg {
	position: absolute;
	top: 0;
	display: block;
	width: auto;
	height: 100%;
	background-size: contain;
	background-repeat: no-repeat;
}
#g-preview-dev-box .g-aiSymbol {
	position: absolute;
	box-sizing: border-box;
}
#g-preview-dev-box .g-aiPointText p {
	white-space: nowrap;
}
#g-preview-dev-box.g-aiPointText p { white-space: nowrap; }
#g-preview-dev-box{
width: 100%;
container-type: inline-size;
@container (min-width:0px) and (max-width: 509px) {
#g-preview-dev-xs {
display: block !important;

#g-png24-layer-image {

background-image: var(--g-png24-layer-image-xs);

}

}
}
@container (min-width:510px) and (max-width: 659px) {
#g-preview-dev-sm {
display: block !important;

#g-png24-layer-image {

background-image: var(--g-png24-layer-image-sm);

}

}
}
@container (min-width:660px) and (max-width: 929px) {
#g-preview-dev-md {
display: block !important;

#g-png24-layer-image {

background-image: var(--g-png24-layer-image-md);

}

}
}
@container (min-width:930px) and (max-width: 1199px) {
#g-preview-dev-lg {
display: block !important;

#g-png24-layer-image {

background-image: var(--g-png24-layer-image-lg);

}

}
}
@container (min-width:1200px) {
#g-preview-dev-xl {
display: block !important;

#g-png24-layer-image {

background-image: var(--g-png24-layer-image-xl);

}

}
}
}
#g-preview-dev-xs {
	position: relative;
	overflow: hidden;
	display: none;
}
#g-preview-dev-xs p {
	font-weight: regular;
	line-height: 72px;
	opacity: 1;
	letter-spacing: 0em;
	font-size: 60px;
	text-align: left;
	color: rgb(0,0,0);
	text-transform: none;
	padding-bottom: 0;
	padding-top: 0;
	mix-blend-mode: normal;
	font-style: normal;
	height: auto;
	position: static;
}
#g-preview-dev-xs .g-pstyle0 {
	font-weight: 500;
	text-align: center;
}
#g-preview-dev-sm {
	position: relative;
	overflow: hidden;
	display: none;
}
#g-preview-dev-sm p {
	font-weight: regular;
	line-height: 13px;
	opacity: 1;
	letter-spacing: 0.2em;
	font-size: 11px;
	text-align: left;
	color: rgb(0,0,0);
	text-transform: none;
	padding-bottom: 0;
	padding-top: 0;
	mix-blend-mode: normal;
	font-style: normal;
	height: auto;
	position: static;
}
#g-preview-dev-sm .g-pstyle0 {
	font-weight: 500;
	line-height: 72px;
	letter-spacing: 0em;
	font-size: 60px;
	text-align: center;
}
#g-preview-dev-sm .g-pstyle1 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
	text-align: center;
}
#g-preview-dev-sm .g-pstyle2 {
	font-weight: 300;
	text-align: center;
}
#g-preview-dev-sm .g-pstyle3 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
}
#g-preview-dev-md {
	position: relative;
	overflow: hidden;
	display: none;
}
#g-preview-dev-md p {
	font-weight: regular;
	line-height: 17px;
	opacity: 1;
	letter-spacing: 0.2em;
	font-size: 14px;
	text-align: left;
	color: rgb(0,0,0);
	text-transform: none;
	padding-bottom: 0;
	padding-top: 0;
	mix-blend-mode: normal;
	font-style: normal;
	height: auto;
	position: static;
}
#g-preview-dev-md .g-pstyle0 {
	font-weight: 500;
	line-height: 72px;
	letter-spacing: 0em;
	font-size: 60px;
	text-align: center;
}
#g-preview-dev-md .g-pstyle1 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
	text-align: center;
}
#g-preview-dev-md .g-pstyle2 {
	font-weight: 300;
	text-align: center;
}
#g-preview-dev-md .g-pstyle3 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
}
#g-preview-dev-lg {
	position: relative;
	overflow: hidden;
	display: none;
}
#g-preview-dev-lg p {
	font-weight: regular;
	line-height: 17px;
	opacity: 1;
	letter-spacing: 0.2em;
	font-size: 14px;
	text-align: left;
	color: rgb(0,0,0);
	text-transform: none;
	padding-bottom: 0;
	padding-top: 0;
	mix-blend-mode: normal;
	font-style: normal;
	height: auto;
	position: static;
}
#g-preview-dev-lg .g-pstyle0 {
	font-weight: 500;
	line-height: 72px;
	letter-spacing: 0em;
	font-size: 60px;
	text-align: center;
}
#g-preview-dev-lg .g-pstyle1 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
	text-align: center;
}
#g-preview-dev-lg .g-pstyle2 {
	font-weight: 300;
	text-align: center;
}
#g-preview-dev-lg .g-pstyle3 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
}
#g-preview-dev-xl {
	position: relative;
	overflow: hidden;
	display: none;
}
#g-preview-dev-xl p {
	font-weight: regular;
	line-height: 17px;
	opacity: 1;
	letter-spacing: 0.2em;
	font-size: 14px;
	text-align: left;
	color: rgb(0,0,0);
	text-transform: none;
	padding-bottom: 0;
	padding-top: 0;
	mix-blend-mode: normal;
	font-style: normal;
	height: auto;
	position: static;
}
#g-preview-dev-xl .g-pstyle0 {
	font-weight: 500;
	line-height: 72px;
	letter-spacing: 0em;
	font-size: 60px;
	text-align: center;
}
#g-preview-dev-xl .g-pstyle1 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
	text-align: center;
}
#g-preview-dev-xl .g-pstyle2 {
	font-weight: 300;
	text-align: center;
}
#g-preview-dev-xl .g-pstyle3 {
	font-weight: 500;
	line-height: 43px;
	letter-spacing: 0em;
	font-size: 36px;
}
.g-taggedText:empty::before {
content: attr(data-tagged-type);
padding: 0px 4px;
font-size: 0.6rem;
font-style: normal;
color: #fff;
background-color: #ee0000;
display: block;
font-weight: 800;
visibility: var(--debug-tagged-text, hidden);
}

.g-taggedText:empty::after {
content: attr(data-tagged-prop);
padding: 0px 4px;
font-size: 0.8rem;
font-style: normal;
color: #fff;
font-weight: 500;
visibility: var(--debug-tagged-text, hidden);
}

.g-taggedText:empty {
background-color: #440000;
outline: 2px solid #ee0000;
visibility: var(--debug-tagged-text, hidden);
}

.g-taggedText:not(:empty)::before {
content: attr(data-tagged-type);
position: absolute;
width: calc(100% + 4px);
transform: translateY(-100%) translateX(-2px);
padding: 0px 4px;
font-size: 0.6rem;
font-style: normal;
color: #fff;
background-color: black;
display: block;
font-weight: 800;
visibility: var(--debug-tagged-text, hidden);
box-sizing: border-box;
}

.g-taggedText {
outline: var(--debug-stroke, 0px) solid black;
}

</style>

<script>
	let { assetsPath = '/', onAiMounted = null, onArtboardChange = null, chart, taggedText = {text: {}, htext: {}}, debugTaggedText = false } = $props();
import { onMount, untrack } from 'svelte';

let processedPath = $derived(

assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/'

);

let aiBox;
let aiBoxWidth = $state(undefined);
let allArtboards = $state([]);
let activeArtboard = $state(undefined);
onMount(() => {
allArtboards = Array.from(aiBox.querySelectorAll('.g-artboard'));
onAiMounted?.();
});
$effect(() => {
if (aiBoxWidth && onArtboardChange) {
const currentArtboard = allArtboards.filter((artboard) => {
const minWidth = parseFloat(artboard.dataset.minWidth);
const maxWidth = parseFloat(artboard.dataset.maxWidth) || Infinity;
return minWidth <= aiBoxWidth && maxWidth >= aiBoxWidth;
})[0];
if (currentArtboard?.id !== activeArtboard?.id) {
activeArtboard = untrack(() => currentArtboard);
onArtboardChange(activeArtboard);
}
}
});

</script>
<div id="g-preview-dev-box" class="ai2svelte" bind:this={aiBox} bind:clientWidth={aiBoxWidth} style:--debug-tagged-text={debugTaggedText ? 'visible' : 'hidden'}
style:--debug-stroke={debugTaggedText ? '2px' : '0px'} style:--g-png24-layer-image-xs={\`url("\${processedPath}/tagged/preview-dev/layer-image-xs.png")\`};
style:--g-png24-layer-image-sm={\`url("\${processedPath}/tagged/preview-dev/layer-image-sm.png")\`};
style:--g-png24-layer-image-md={\`url("\${processedPath}/tagged/preview-dev/layer-image-md.png")\`};
style:--g-png24-layer-image-lg={\`url("\${processedPath}/tagged/preview-dev/layer-image-lg.png")\`};
style:--g-png24-layer-image-xl={\`url("\${processedPath}/tagged/preview-dev/layer-image-xl.png")\`};>
	<!-- Artboard: xs -->
	<div id="g-preview-dev-xs" class="g-artboard" style="max-width: 509px;aspect-ratio: 0.53225806451613;" data-aspect-ratio="0.532" data-min-width="0" data-max-width="509">
<svg class="g-preview-dev-xs-img g-aiImg g-svg" style="undefinedwidth: 100%;height: 100%;top: 0%;left: 0%;" id="g-preview-dev-xs-img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 4958 525.252">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <g id="base">
    <g>
      <g id="VFsO5o">
        <image id="VFsO5o1" data-name="VFsO5o" width="2048" height="2048" transform="translate(4432.748) scale(.2565)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-xs-1.png"/>
      </g>
      <text transform="translate(4662.5498 280.7418)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">XL</tspan></text>
    </g>
    <g>
      <g id="VFsO5o2" data-name="VFsO5o">
        <image id="VFsO5o3" data-name="VFsO5o" width="2048" height="2048" transform="translate(3143.626 48.8781) scale(.2093)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-xs-2.png"/>
      </g>
      <text transform="translate(3342.9659 281.3678)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">L</tspan></text>
    </g>
    <g>
      <g id="VFsO5o4" data-name="VFsO5o">
        <image id="VFsO5o5" data-name="VFsO5o" width="2048" height="2048" transform="translate(1311 90.252) scale(.1689)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-xs-3.png"/>
      </g>
      <text transform="translate(1439.5059 281.3678)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">MD</tspan></text>
    </g>
    <g>
      <g id="VFsO5o6" data-name="VFsO5o">
        <image id="VFsO5o7" data-name="VFsO5o" width="2048" height="2048" transform="translate(550 124.252) scale(.136)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-xs-4.png"/>
      </g>
      <text transform="translate(647.956 281.368)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">SM</tspan></text>
    </g>
    <g>
      <g id="VFsO5o8" data-name="VFsO5o">
        <image id="VFsO5o9" data-name="VFsO5o" width="2048" height="2048" transform="translate(0 164.252) scale(.097)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-xs-5.png"/>
      </g>
      <text transform="translate(64.856 281.368)" display="none" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">XS</tspan></text>
    </g>
  </g>
  <rect x="144" y="209.252" width="108" height="108"/>
<style>
#g-preview-dev-xs-img rect, #g-preview-dev-xs-img circle, #g-preview-dev-xs-img path, #g-preview-dev-xs-img line, #g-preview-dev-xs-img polyline, #g-preview-dev-xs-img polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>
		<div id="g-ai0-1" class="g-artwork g-aiAbs" style="top:43.871%;left:50.2595%;margin-left:-10.6061%;width:21.2121%;">
			<p class="g-pstyle0">XS</p>
		</div>
		<div id="g-png24-layer-image" class="g-png24 g-aiImg" alt="" style="position:absolute;left:29.0909%;top:54.8387%;width:41.8182% !important;height:22.2581%;opacity:1;mix-blend-mode: exclusion;;"></div>
<svg class="g-preview-dev-xs-vector-img g-svg" style="width: 39.697%;height: 13.9785%;top: 27.1237%;left: 30.303%;position: absolute;" id="g-svg-vector" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 131 86.667">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <rect style="mix-blend-mode:screen;" width="86.667" height="86.667" fill="#fbd200"/>
  <rect style="mix-blend-mode:difference;" x="44.333" width="86.667" height="86.667" fill="#ef0000"/>
<style>
#g-svg-vector rect, #g-svg-vector circle, #g-svg-vector path, #g-svg-vector line, #g-svg-vector polyline, #g-svg-vector polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>

		<div class="g-snippet-layer g-chart">
			<div class="g-aiSymbol g-aiSnippet" id="g-snippet-chart" data-name="chart" style="width: 32.7273%; height: 17.4194%; margin-left: -16.3636%; margin-top: -16.3636%; background-color: rgb(0,0,0); left: 80%; top: 50%;">
{@render chart?.()}
</div>
		</div>

	</div>
	<!-- Artboard: sm -->
	<div id="g-preview-dev-sm" class="g-artboard" style="min-width: 510px;max-width: 659px;aspect-ratio: 0.82258064516129;" data-aspect-ratio="0.823" data-min-width="510" data-max-width="659">
<svg class="g-preview-dev-sm-img g-aiImg g-svg" style="undefinedwidth: 100%;height: 100%;top: 0%;left: 0%;" id="g-preview-dev-sm-img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 4958 525.252">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <g id="base">
    <g>
      <g id="VFsO5o">
        <image id="VFsO5o1" data-name="VFsO5o" width="2048" height="2048" transform="translate(4432.748) scale(.2565)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-sm-1.png"/>
      </g>
      <text transform="translate(4662.5498 280.7418)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">XL</tspan></text>
    </g>
    <g>
      <g id="VFsO5o2" data-name="VFsO5o">
        <image id="VFsO5o3" data-name="VFsO5o" width="2048" height="2048" transform="translate(3143.626 48.8781) scale(.2093)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-sm-2.png"/>
      </g>
      <text transform="translate(3342.9659 281.3678)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">L</tspan></text>
    </g>
    <g>
      <g id="VFsO5o4" data-name="VFsO5o">
        <image id="VFsO5o5" data-name="VFsO5o" width="2048" height="2048" transform="translate(1311 90.252) scale(.1689)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-sm-3.png"/>
      </g>
      <text transform="translate(1439.5059 281.3678)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">MD</tspan></text>
    </g>
    <g>
      <g id="VFsO5o6" data-name="VFsO5o">
        <image id="VFsO5o7" data-name="VFsO5o" width="2048" height="2048" transform="translate(550 124.252) scale(.136)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-sm-4.png"/>
      </g>
      <text transform="translate(647.956 281.368)" display="none" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">SM</tspan></text>
    </g>
    <g>
      <g id="VFsO5o8" data-name="VFsO5o">
        <image id="VFsO5o9" data-name="VFsO5o" width="2048" height="2048" transform="translate(0 164.252) scale(.097)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-sm-5.png"/>
      </g>
      <text transform="translate(64.856 281.368)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">XS</tspan></text>
    </g>
  </g>
  <rect x="730" y="102.252" width="108" height="108"/>
<style>
#g-preview-dev-sm-img rect, #g-preview-dev-sm-img circle, #g-preview-dev-sm-img path, #g-preview-dev-sm-img line, #g-preview-dev-sm-img polyline, #g-preview-dev-sm-img polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>
		<div id="g-ai1-1" class="g-artwork g-aiAbs" style="top:43.871%;left:50.0894%;margin-left:-8.1373%;width:16.2745%;">
			<p class="g-pstyle0">SM</p>
		</div>
		<div id="g-png24-layer-image" class="g-png24 g-aiImg" alt="" style="position:absolute;left:60.3922%;top:35.6452%;width:33.7255% !important;height:27.7419%;opacity:1;mix-blend-mode: exclusion;;"></div>
		<div id="g-text1" class="g-plain g-aiAbs" style="top:63.2258%;left:34.6994%;width:28.8235%;">
			
<p class="g-pstyle3 g-taggedText g-text"data-tagged-type="TEXT" data-tagged-prop="plain.text1">{taggedText?.text?.plain?.text1 || ''}</p>

		</div>
		<div id="g-text1" class="g-html g-aiAbs" style="top:46.2903%;left:77.2423%;margin-left:-15.6863%;width:31.3725%;">
			
<p class="g-pstyle1 g-taggedText g-htext"data-tagged-type="HTEXT" data-tagged-prop="html.text1">{@html taggedText?.htext?.html?.text1 || ''}</p>

		</div>
<svg class="g-preview-dev-sm-vector-img g-svg" style="width: 34.902%;height: 28.7097%;top: 41.129%;left: 11.3725%;position: absolute;" id="g-svg-vector" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 178 178">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <rect style="mix-blend-mode:screen;" width="118.667" height="118.667" fill="#fbd200"/>
  <rect style="mix-blend-mode:difference;" x="59.333" y="59.333" width="118.667" height="118.667" fill="#ef0000"/>
<style>
#g-svg-vector rect, #g-svg-vector circle, #g-svg-vector path, #g-svg-vector line, #g-svg-vector polyline, #g-svg-vector polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>

		<div id="g-ai1-4" class="g-text g-aiAbs" style="top:59.3548%;left:34.689%;margin-left:-8.0392%;width:16.0784%;">
			<p class="g-pstyle2">DIFFERENCE</p>
		</div>
		<div id="g-ai1-3" class="g-text g-aiAbs" style="top:49.0323%;left:23.0434%;margin-left:-5%;width:10%;">
			<p class="g-pstyle2">SCREEN</p>
		</div>
		<div class="g-snippet-layer g-chart">
			<div class="g-aiSymbol g-aiSnippet" id="g-snippet-chart" data-name="chart" style="width: 21.1765%; height: 17.4194%; margin-left: -10.5882%; margin-top: -10.5882%; background-color: rgb(0,0,0); left: 68.6274%; top: 32.7419%;">
{@render chart?.()}
</div>
		</div>

	</div>
	<!-- Artboard: md -->
	<div id="g-preview-dev-md" class="g-artboard" style="min-width: 660px;max-width: 929px;aspect-ratio: 1.06451612903226;" data-aspect-ratio="1.065" data-min-width="660" data-max-width="929">
<svg class="g-preview-dev-md-img g-aiImg g-svg" style="undefinedwidth: 100%;height: 100%;top: 0%;left: 0%;" id="g-preview-dev-md-img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 4958 525.252">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <g id="base">
    <g>
      <g id="VFsO5o">
        <image id="VFsO5o1" data-name="VFsO5o" width="2048" height="2048" transform="translate(4432.748) scale(.2565)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-md-1.png"/>
      </g>
      <text transform="translate(4662.5498 280.7418)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">XL</tspan></text>
    </g>
    <g>
      <g id="VFsO5o2" data-name="VFsO5o">
        <image id="VFsO5o3" data-name="VFsO5o" width="2048" height="2048" transform="translate(3143.626 48.8781) scale(.2093)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-md-2.png"/>
      </g>
      <text transform="translate(3342.9659 281.3678)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">L</tspan></text>
    </g>
    <g>
      <g id="VFsO5o4" data-name="VFsO5o">
        <image id="VFsO5o5" data-name="VFsO5o" width="2048" height="2048" transform="translate(1311 90.252) scale(.1689)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-md-3.png"/>
      </g>
      <text transform="translate(1439.5059 281.3678)" display="none" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">MD</tspan></text>
    </g>
    <g>
      <g id="VFsO5o6" data-name="VFsO5o">
        <image id="VFsO5o7" data-name="VFsO5o" width="2048" height="2048" transform="translate(550 124.252) scale(.136)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-md-4.png"/>
      </g>
      <text transform="translate(647.956 281.368)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">SM</tspan></text>
    </g>
    <g>
      <g id="VFsO5o8" data-name="VFsO5o">
        <image id="VFsO5o9" data-name="VFsO5o" width="2048" height="2048" transform="translate(0 164.252) scale(.097)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-md-5.png"/>
      </g>
      <text transform="translate(64.856 281.368)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">XS</tspan></text>
    </g>
  </g>
  <rect x="1524" y="10.252" width="160" height="160"/>
<style>
#g-preview-dev-md-img rect, #g-preview-dev-md-img circle, #g-preview-dev-md-img path, #g-preview-dev-md-img line, #g-preview-dev-md-img polyline, #g-preview-dev-md-img polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>
		<div id="g-ai2-1" class="g-artwork g-aiAbs" style="top:43.871%;left:50.0766%;margin-left:-6.8182%;width:13.6364%;">
			<p class="g-pstyle0">MD</p>
		</div>
		<div id="g-png24-layer-image" class="g-png24 g-aiImg" alt="" style="position:absolute;left:58.7879%;top:30.9677%;width:34.8485% !important;height:37.0968%;opacity:1;mix-blend-mode: exclusion;;"></div>
		<div id="g-text1" class="g-plain g-aiAbs" style="top:64.6774%;left:37.1162%;width:22.2727%;">
			
<p class="g-pstyle3 g-taggedText g-text"data-tagged-type="TEXT" data-tagged-prop="plain.text1">{taggedText?.text?.plain?.text1 || ''}</p>

		</div>
		<div id="g-text1" class="g-html g-aiAbs" style="top:46.2903%;left:76.2024%;margin-left:-12.1212%;width:24.2424%;">
			
<p class="g-pstyle1 g-taggedText g-htext"data-tagged-type="HTEXT" data-tagged-prop="html.text1">{@html taggedText?.htext?.html?.text1 || ''}</p>

		</div>
<svg class="g-preview-dev-md-vector-img g-svg" style="width: 33.6364%;height: 35.8065%;top: 37.5806%;left: 12.5758%;position: absolute;" id="g-svg-vector" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 222 222">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <rect style="mix-blend-mode:screen;" width="148" height="148" fill="#fbd200"/>
  <rect style="mix-blend-mode:difference;" x="74" y="74" width="148" height="148" fill="#ef0000"/>
<style>
#g-svg-vector rect, #g-svg-vector circle, #g-svg-vector path, #g-svg-vector line, #g-svg-vector polyline, #g-svg-vector polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>

		<div id="g-ai2-4" class="g-text g-aiAbs" style="top:60.1613%;left:35.0265%;margin-left:-7.7273%;width:15.4545%;">
			<p class="g-pstyle2">DIFFERENCE</p>
		</div>
		<div id="g-ai2-3" class="g-text g-aiAbs" style="top:47.4194%;left:23.8533%;margin-left:-4.8485%;width:9.697%;">
			<p class="g-pstyle2">SCREEN</p>
		</div>
		<div class="g-snippet-layer g-chart">
			<div class="g-aiSymbol g-aiSnippet" id="g-snippet-chart" data-name="chart" style="width: 24.2424%; height: 25.8065%; margin-left: -12.1212%; margin-top: -12.1212%; background-color: rgb(0,0,0); left: 68.1818%; top: 22.0968%;">
{@render chart?.()}
</div>
		</div>

	</div>
	<!-- Artboard: lg -->
	<div id="g-preview-dev-lg" class="g-artboard" style="min-width: 930px;max-width: 1199px;aspect-ratio: 1.5;" data-aspect-ratio="1.5" data-min-width="930" data-max-width="1199">
<svg class="g-preview-dev-lg-img g-aiImg g-svg" style="undefinedwidth: 100%;height: 100%;top: 0%;left: 0%;" id="g-preview-dev-lg-img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 4958 525.252">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <g id="base">
    <g>
      <g id="VFsO5o">
        <image id="VFsO5o1" data-name="VFsO5o" width="2048" height="2048" transform="translate(4432.748) scale(.2565)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-lg-1.png"/>
      </g>
      <text transform="translate(4662.5498 280.7418)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">XL</tspan></text>
    </g>
    <g>
      <g id="VFsO5o2" data-name="VFsO5o">
        <image id="VFsO5o3" data-name="VFsO5o" width="2048" height="2048" transform="translate(3143.626 48.8781) scale(.2093)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-lg-2.png"/>
      </g>
      <text transform="translate(3342.9659 281.3678)" display="none" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">L</tspan></text>
    </g>
    <g>
      <g id="VFsO5o4" data-name="VFsO5o">
        <image id="VFsO5o5" data-name="VFsO5o" width="2048" height="2048" transform="translate(1311 90.252) scale(.1689)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-lg-3.png"/>
      </g>
      <text transform="translate(1439.5059 281.3678)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">MD</tspan></text>
    </g>
    <g>
      <g id="VFsO5o6" data-name="VFsO5o">
        <image id="VFsO5o7" data-name="VFsO5o" width="2048" height="2048" transform="translate(550 124.252) scale(.136)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-lg-4.png"/>
      </g>
      <text transform="translate(647.956 281.368)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">SM</tspan></text>
    </g>
    <g>
      <g id="VFsO5o8" data-name="VFsO5o">
        <image id="VFsO5o9" data-name="VFsO5o" width="2048" height="2048" transform="translate(0 164.252) scale(.097)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-lg-5.png"/>
      </g>
      <text transform="translate(64.856 281.368)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">XS</tspan></text>
    </g>
  </g>
  <rect x="3387" y="10.252" width="160" height="160"/>
<style>
#g-preview-dev-lg-img rect, #g-preview-dev-lg-img circle, #g-preview-dev-lg-img path, #g-preview-dev-lg-img line, #g-preview-dev-lg-img polyline, #g-preview-dev-lg-img polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>
		<div id="g-ai3-1" class="g-artwork g-aiAbs" style="top:43.871%;left:50.0663%;margin-left:-3.7634%;width:7.5269%;">
			<p class="g-pstyle0">LG</p>
		</div>
		<div id="g-png24-layer-image" class="g-png24 g-aiImg" alt="" style="position:absolute;left:59.1398%;top:27.7419%;width:29.0323% !important;height:43.5484%;opacity:1;mix-blend-mode: exclusion;;"></div>
		<div id="g-text1" class="g-plain g-aiAbs" style="top:64.6774%;left:35.8029%;width:15.8065%;">
			
<p class="g-pstyle3 g-taggedText g-text"data-tagged-type="TEXT" data-tagged-prop="plain.text1">{taggedText?.text?.plain?.text1 || ''}</p>

		</div>
		<div id="g-text1" class="g-html g-aiAbs" style="top:46.2903%;left:73.649%;margin-left:-8.6022%;width:17.2043%;">
			
<p class="g-pstyle1 g-taggedText g-htext"data-tagged-type="HTEXT" data-tagged-prop="html.text1">{@html taggedText?.htext?.html?.text1 || ''}</p>

		</div>
<svg class="g-preview-dev-lg-vector-img g-svg" style="width: 23.871%;height: 35.8065%;top: 37.5806%;left: 18.2796%;position: absolute;" id="g-svg-vector" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 222 222">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <rect style="mix-blend-mode:screen;" width="148" height="148" fill="#fbd200"/>
  <rect style="mix-blend-mode:difference;" x="74" y="74" width="148" height="148" fill="#ef0000"/>
<style>
#g-svg-vector rect, #g-svg-vector circle, #g-svg-vector path, #g-svg-vector line, #g-svg-vector polyline, #g-svg-vector polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>

		<div id="g-ai3-4" class="g-text g-aiAbs" style="top:60.1613%;left:34.2123%;margin-left:-5.4839%;width:10.9677%;">
			<p class="g-pstyle2">DIFFERENCE</p>
		</div>
		<div id="g-ai3-3" class="g-text g-aiAbs" style="top:47.4194%;left:26.283%;margin-left:-3.4409%;width:6.8817%;">
			<p class="g-pstyle2">SCREEN</p>
		</div>
		<div class="g-snippet-layer g-chart">
			<div class="g-aiSymbol g-aiSnippet" id="g-snippet-chart" data-name="chart" style="width: 17.2043%; height: 25.8065%; margin-left: -8.6022%; margin-top: -8.6022%; background-color: rgb(0,0,0); left: 61.7204%; top: 22.0968%;">
{@render chart?.()}
</div>
		</div>

	</div>
	<!-- Artboard: xl -->
	<div id="g-preview-dev-xl" class="g-artboard" style="min-width: 1200px;aspect-ratio: 1.93548387096774;" data-aspect-ratio="1.935" data-min-width="1200">
<svg class="g-preview-dev-xl-img g-aiImg g-svg" style="undefinedwidth: 100%;height: 100%;top: 0%;left: 0%;" id="g-preview-dev-xl-img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 4970 525.252">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <g id="base">
    <g>
      <g id="VFsO5o">
        <image id="VFsO5o1" data-name="VFsO5o" width="2048" height="2048" transform="translate(4432.748) scale(.2565)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-xl-1.png"/>
      </g>
      <text transform="translate(4662.5498 280.7418)" display="none" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">XL</tspan></text>
    </g>
    <g>
      <g id="VFsO5o2" data-name="VFsO5o">
        <image id="VFsO5o3" data-name="VFsO5o" width="2048" height="2048" transform="translate(3143.626 48.8781) scale(.2093)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-xl-2.png"/>
      </g>
      <text transform="translate(3342.9659 281.3678)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">L</tspan></text>
    </g>
    <g>
      <g id="VFsO5o4" data-name="VFsO5o">
        <image id="VFsO5o5" data-name="VFsO5o" width="2048" height="2048" transform="translate(1311 90.252) scale(.1689)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-xl-3.png"/>
      </g>
      <text transform="translate(1439.5059 281.3678)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">MD</tspan></text>
    </g>
    <g>
      <g id="VFsO5o6" data-name="VFsO5o">
        <image id="VFsO5o7" data-name="VFsO5o" width="2048" height="2048" transform="translate(550 124.252) scale(.136)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-xl-4.png"/>
      </g>
      <text transform="translate(647.956 281.368)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">SM</tspan></text>
    </g>
    <g>
      <g id="VFsO5o8" data-name="VFsO5o">
        <image id="VFsO5o9" data-name="VFsO5o" width="2048" height="2048" transform="translate(0 164.252) scale(.097)" xlink:href="{ assetsPath.replace(new RegExp('/([^/.]+)$'), '/$1/') || '/' }undefinedtagged/undefined/preview-dev-xl-5.png"/>
      </g>
      <text transform="translate(64.856 281.368)" font-family="Knowledge2017-Medium, Knowledge2017" font-size="60" font-weight="500"><tspan x="0" y="0">XS</tspan></text>
    </g>
  </g>
  <rect x="4810" y="10.252" width="160" height="160"/>
<style>
#g-preview-dev-xl-img rect, #g-preview-dev-xl-img circle, #g-preview-dev-xl-img path, #g-preview-dev-xl-img line, #g-preview-dev-xl-img polyline, #g-preview-dev-xl-img polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>
		<div id="g-ai4-1" class="g-artwork g-aiAbs" style="top:43.871%;left:50.0042%;margin-left:-2.7917%;width:5.5833%;">
			<p class="g-pstyle0">XL</p>
		</div>
		<div id="g-png24-layer-image" class="g-png24 g-aiImg" alt="" style="position:absolute;left:60.75%;top:27.7419%;width:22.5% !important;height:43.5484%;opacity:1;mix-blend-mode: exclusion;;"></div>
		<div id="g-text1" class="g-plain g-aiAbs" style="top:64.6774%;left:34.5806%;width:12.25%;">
			
<p class="g-pstyle3 g-taggedText g-text"data-tagged-type="TEXT" data-tagged-prop="plain.text1">{taggedText?.text?.plain?.text1 || ''}</p>

		</div>
		<div id="g-text1" class="g-html g-aiAbs" style="top:46.2903%;left:71.9946%;margin-left:-6.6667%;width:13.3333%;">
			
<p class="g-pstyle1 g-taggedText g-htext"data-tagged-type="HTEXT" data-tagged-prop="html.text1">{@html taggedText?.htext?.html?.text1 || ''}</p>

		</div>
<svg class="g-preview-dev-xl-vector-img g-svg" style="width: 18.5%;height: 35.8065%;top: 37.5806%;left: 21.25%;position: absolute;" id="g-svg-vector" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 222 222">
  <!-- Generator: Adobe Illustrator 30.6.0, SVG Export Plug-In . SVG Version: 2.1.4 Build 109)  -->
  <rect style="mix-blend-mode:screen;" width="148" height="148" fill="#fbd200"/>
  <rect style="mix-blend-mode:difference;" x="74" y="74" width="148" height="148" fill="#ef0000"/>
<style>
#g-svg-vector rect, #g-svg-vector circle, #g-svg-vector path, #g-svg-vector line, #g-svg-vector polyline, #g-svg-vector polygon { vector-effect: non-scaling-stroke; }
</style>
</svg>

		<div id="g-ai4-4" class="g-text g-aiAbs" style="top:60.1613%;left:33.5979%;margin-left:-4.25%;width:8.5%;">
			<p class="g-pstyle2">DIFFERENCE</p>
		</div>
		<div id="g-ai4-3" class="g-text g-aiAbs" style="top:47.4194%;left:27.4526%;margin-left:-2.6667%;width:5.3333%;">
			<p class="g-pstyle2">SCREEN</p>
		</div>
		<div class="g-snippet-layer g-chart">
			<div class="g-aiSymbol g-aiSnippet" id="g-snippet-chart" data-name="chart" style="width: 13.3333%; height: 25.8065%; margin-left: -6.6667%; margin-top: -6.6667%; background-color: rgb(0,0,0); left: 66.1667%; top: 22.0968%;">
{@render chart?.()}
</div>
		</div>

	</div>
</div>



<!--

TAGGED TEXT PROPS

taggedText={
{
  "text": {
    "plain": {
      "text1": ""
    }
  },
  "htext": {
    "html": {
      "text1": ""
    }
  }
}
}

-->
<!-- End ai2svelte - <timestamp> -->
"
`;
